# syslog-parse

./: Cargo.toml  Licenses  README.md
.github/workflows/: check.yml
src/: error.rs  lib.rs  stream.rs
src/format/: appname.rs  hostname.rs  mod.rs  msgid.rs  pri.rs  procid.rs  structured_data.rs  tagname.rs  timestamp.rs  version.rs
src/protocol/: mod.rs  rfc3164.rs  rfc5424.rs
